--- a/(Clone) PracticeProjectHR.ipynb
+++ b/(Clone) PracticeProjectHR.ipynb
@@ -19,6 +19,10 @@
    "outputs": [],
    "source": [
     "df = spark.read.format(\"csv\").option(\"header\", \"true\").load(\"/Volumes/workspace/default/practice/WA_Fn-UseC_-HR-Employee-Attrition.csv\")\n",
+    "display(df)\n",
+    "\n",
+    "\n",
+    "df = spark.read.format(\"csv\").option(\"header\", \"true\").load(\"/Volumes/workspace/default/practice/WA_Fn-UseC_-HR-Employee-Attrition.csv\")\n",
     "display(df)"
    ]
   },
